Updated encoding to properly reduce encoded bits by chunking them into chunks of 8 and then encoding them as bytes.
Added decoding

--- a/HuffmanEncoding/Properties/launchSettings.json
+++ b/HuffmanEncoding/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "HuffmanEncoding": {
       "commandName": "Project",
-      "commandLineArgs": "-i \"C:\\Users\\patri\\Documents\\HuffmanEncoding\\Les Miserables.txt\" -o TestEncoding.txt"
+      "commandLineArgs": "-i \"C:\\Users\\patri\\source\\repos\\HuffmanEncoding\\HuffmanEncoding\\bin\\Debug\\net6.0\\TestEncoding.txt\" -o TestDecoding.txt -d"
     }
   }
 }
